--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
     <!-- Link to styles of your own -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 
+    <style>
+        /* Style for the footer */
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: #f2f2f2;
+            text-align: center;
+            padding: 10px 0; /* Reduced padding */
+        }
+
+        .footer img {
+            width: 50px; /* Adjusted image size */
+            height: 50px; /* Adjusted image size */
+            margin: 0 5px; /* Reduced margin */
+            object-fit: cover; /* Ensure all images are square */
+        }
+    </style>
+
 </head>
 
 <body>
@@ -33,6 +53,15 @@
 
     <!-- Link to scripts of your own -->
     <!-- <script src="./scripts/script.js"></script> -->
+
+    <div class="footer">
+        <!-- Five images for the footer -->
+        <img src="images/home-icon.webp" alt="Image 1">
+        <img src="images/Calendar.png" alt="Image 2">
+        <img src="images/plus.png" alt="Image 3">
+        <img src="images/dollar-sign.png" alt="Image 4">
+        <img src="images/profile-icon.webp" alt="Image 5">
+    </div>
 
 </body>
 
