Added logo picture, added & styled the nav bar with the logo and reformatted code.

--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
     <!-- Link to styles of your own -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
     <style>
-        #welcome-back{
+        .navbar {
             text-align: center;
         }
 
-        #monthly-transcations{
+        #welcome-back {
             text-align: center;
         }
-        #landing-page-image{
-            width: 20%; 
+
+        #monthly-transcations {
+            text-align: center;
+        }
+
+        #landing-page-image {
+            width: 20%;
             height: 20%;
         }
-
     </style>
 
     <style>
@@ -40,14 +44,19 @@
             width: 100%;
             background-color: #f2f2f2;
             text-align: center;
-            padding: 10px 0; /* Reduced padding */
+            padding: 10px 0;
+            /* Reduced padding */
         }
 
         .footer img {
-            width: 50px; /* Adjusted image size */
-            height: 50px; /* Adjusted image size */
-            margin: 0 5px; /* Reduced margin */
-            object-fit: cover; /* Ensure all images are square */
+            width: 50px;
+            /* Adjusted image size */
+            height: 50px;
+            /* Adjusted image size */
+            margin: 0 5px;
+            /* Reduced margin */
+            object-fit: cover;
+            /* Ensure all images are square */
         }
     </style>
 
@@ -55,13 +64,20 @@
 
 <body>
 
+    <!--Navigation bar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+        <div class=navbar>
+            <h1> <img src="images/Logo - Crave Control.png" alt=" logo" /> </h1>
+        </div>
+    </nav>
+
     <!--Welcome Back message-->
     <div id="welcome-back">
         <br>
         <h2>Welcome Back</h2>
         <h2>[Username]!</h2>
     </div>
-   
+
     <!--Monthly Transactions message-->
     <div id="monthly-transcations">
         <br>
