--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
     <!-- Link to styles of your own -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
     <style>
-        .navbar {
-            text-align: center;
+        /* puts all hyperlinks in the navbar at the end */
+        .hyperlinks {
+            display: flex;
+            justify-content: end;
+            align-items: end;
+        }
+
+        /* centers logo */
+        .logo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         #welcome-back {
@@ -65,11 +75,20 @@
 <body>
 
     <!--Navigation bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <div class=navbar>
-            <h1> <img src="images/Logo - Crave Control.png" alt=" logo" /> </h1>
+    <div class="navbar">
+        <div class="hyperlinks">
+            <a href="#home">Home</a>
+            <a href="#profile">Profile</a>
+            <a href="#settings">Settings</a>
+            <a href="#logout">Logout</a>
         </div>
-    </nav>
+
+        <br>
+
+        <div class="logo">
+            <img src="images/Logo - Crave Control.png" alt="Crave Control" />
+        </div>
+    </div>
 
     <!--Welcome Back message-->
     <div id="welcome-back">
@@ -97,11 +116,9 @@
 
     <div class="footer">
         <!-- Five images for the footer -->
-        <img src="images/home-icon.webp" alt="Image 1">
-        <img src="images/Calendar.png" alt="Image 2">
-        <img src="images/plus.png" alt="Image 3">
-        <img src="images/dollar-sign.png" alt="Image 4">
-        <img src="images/profile-icon.webp" alt="Image 5">
+        <img src="images/Calendar.png" alt="Image 1">
+        <img src="images/plus.png" alt="Image 2">
+        <img src="images/dollar-sign.png" alt="Image 3">
     </div>
 
 </body>
