Set Budget page created

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             text-align: center;
         }
         #landing-page-image{
-            width: 20%; 
-            height: 20%;
+            min-width: 20%;
+            min-height: 20%;
+            max-width: 25%; 
+            max-height: 25%;
         }
 
     </style>
@@ -49,7 +51,7 @@
         <h2>[Months's] Transactions</h2>
         <br>
         <br>
-        <img src="c:\Users\jasku\Desktop\Projects 1800\Lab 5\Landing page image.png" id="landing-page-image">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSizq0G2YpAzvKH6d1Ny_jZMwpPzYj3QORsQ&usqp=CAU" id="landing-page-image">
     </div>
 
     <!---------------------------------------------->
@@ -58,6 +60,16 @@
 
     <!-- Link to scripts of your own -->
     <!-- <script src="./scripts/script.js"></script> -->
+
+    <div class="footer">
+        <!-- Five images for the footer -->
+        <img src="images/Calendar.png" alt="Image 1">
+        <img src="images/plus.png" alt="Image 2">
+        <a href="setbudget.html">
+            <img src="images/dollar-sign.png" alt="Image 3" style="cursor: pointer;">
+        </a>
+
+    </div>
 
 </body>
 
