--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             text-align: center;
         }
         #landing-page-image{
-            min-width: 20%; 
-            min-height: 20%;
-            max-width: 25%; 
-            max-height: 25%;
+            min-width: 120px; 
+            min-height: 120px;
+            max-width: 180px; 
+            max-height: 180px;
         }
     </style>
 
@@ -104,8 +104,7 @@
         <br>
         <h2>[Months's] Transactions</h2>
         <br>
-        <br>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSizq0G2YpAzvKH6d1Ny_jZMwpPzYj3QORsQ&usqp=CAU" id="landing-page-image">
+        <img id = "landing-page-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSizq0G2YpAzvKH6d1Ny_jZMwpPzYj3QORsQ&usqp=CAU" id="landing-page-image">
     </div>
 
     <!---------------------------------------------->
