--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 
 </head>
 
@@ -48,13 +48,12 @@
     <nav id="navbarPlaceholder"></nav>
 
     <!-- the body of your page goes here -->
-    <!-- the body of your page goes here -->
-    <div class="container text-center py-4">
-        <h1>Welcome to</h1>
-        <img class="responsive" src="images\Logo - Crave Control.png" alt="">
-        <br><br>
-        <a href="login.html" class="button" type="button">Log in</a>
+    <!-- stuff -->
+    <div class="container">
+        <h1>Let's Login!</h1>
     </div>
+    <div id="firebaseui-auth-container"></div>
+    <div id="loader">Loading...</div>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -62,13 +61,9 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/firebaseAPI_TEAM20.js"></script>
+    <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/script.js"></script>
-
-    <script>
-        logout();       //make sure user is logged out
-    </script>
+    <script src="./scripts/authentication.js"></script>
 
 </body>
 
