--- a/main.html
+++ b/main.html
@@ -5,21 +5,17 @@
     <title>Crave Control</title>
     <meta name="comp1800 project" content="My 1800 App">
 
-    <!------------------------>
     <!-- Required meta tags -->
-    <!------------------------>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!------------------------------------------>
-    <!-- Bootstrap Library CSS JS CDN go here -->
-    <!------------------------------------------>
+    <!-- Bootstrap Library CSS CDN go here -->
+    <!-- Boostrap Library JS CDN  go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
-
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
@@ -37,6 +33,8 @@
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <link rel="stylesheet" href="./styles/style.css">
 
+
+
 </head>
 
 <body>
@@ -44,31 +42,51 @@
     <!-- Your HTML Layout go here -->
     <!------------------------------>
 
-    <!-- our own navbar goes here -->
-    <nav id="navbarPlaceholder"></nav>
+    <!--Navigation bar-->
+    <div class="navbar">
+        <div class="hyperlinks">
+            <a href="#home">Home</a>
+            <a href="#profile">Profile</a>
+            <a href="#settings">Settings</a>
+            <a href="#logout">Logout</a>
+        </div>
+    </div>
+    <br>
 
-    <!-- the body of your page goes here -->
-    <!-- the body of your page goes here -->
-    <div class="container text-center py-4">
-        <h1>Welcome to</h1>
-        <img class="responsive" src="images\Logo - Crave Control.png" alt="">
-        <br><br>
-        <a href="login.html" class="button" type="button">Log in</a>
+    <div class="logo">
+        <img src="images/Logo - Crave Control.png" alt="Crave Control" />
     </div>
 
-    <!-- our own footer goes here-->
-    <nav id="footerPlaceholder"></nav>
+    <!--Welcome Back message-->
+    <div id="welcome-back">
+        <br>
+        <h2>Welcome Back</h2>
+        <h2>[Username]!</h2>
+    </div>
+
+    <!--Monthly Transactions message-->
+    <div id="monthly-transcations">
+        <br>
+        <br>
+        <h2>[Months's] Transactions</h2>
+        <br>
+        <br>
+        <img src="c:\Users\jasku\Desktop\Projects 1800\Lab 5\Landing page image.png" id="landing-page-image">
+    </div>
+
+    <div class="footer">
+        <!-- Five images for the footer -->
+        <img src="images/Calendar.png" alt="Image 1">
+        <img src="images/plus.png" alt="Image 2">
+        <img src="images/dollar-sign.png" alt="Image 3">
+    </div>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/firebaseAPI_TEAM20.js"></script>
+    <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/script.js"></script>
-
-    <script>
-        logout();       //make sure user is logged out
-    </script>
+    <!-- <script src="./scripts/script.js"></script> -->\
 
 </body>
 
