--- a/template.html
+++ b/template.html
@@ -48,13 +48,7 @@
     <nav id="navbarPlaceholder"></nav>
 
     <!-- the body of your page goes here -->
-    <!-- the body of your page goes here -->
-    <div class="container text-center py-4">
-        <h1>Welcome to</h1>
-        <img class="responsive" src="images\Logo - Crave Control.png" alt="">
-        <br><br>
-        <a href="login.html" class="button" type="button">Log in</a>
-    </div>
+    <!-- stuff -->
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -62,13 +56,9 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/firebaseAPI_TEAM20.js"></script>
+    <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/script.js"></script>
-
-    <script>
-        logout();       //make sure user is logged out
-    </script>
+    <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
 
