Changes made to set budget html

--- a/setbudget.html
+++ b/setbudget.html
@@ -10,82 +10,7 @@
     <!-- Boostrap Library JS CDN  go here -->
     <!-- Other libraries go here -->
     <!-- Link to styles of your own -->
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
-    <style>
-      .hyperlinks {
-        display: flex;
-        justify-content: end;
-        align-items: end;
-      }
-
-      /* centers logo */
-      .logo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      #edit-icon {
-        min-width: 100px;
-        max-width: 140px;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      #amount-text{
-        float: left;
-        font-size: 15pt;
-      }
-
-      #days-text{
-        float: left;
-        font-size: 15pt;
-      }
-
-      #amount-input {
-        height: 20px;
-        width: 70px;
-        float: right;
-      }
-
-      #days-input {
-        height: 20px;
-        width: 70px;
-        float: right;
-      }
-
-      #submit-button {
-        padding: 8px 25px;
-        font-size: 15pt;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        font-weight: bold;
-      }
-
-      .footer {
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        background-color: #f2f2f2;
-        text-align: center;
-        padding: 10px 0;
-        /* Reduced padding */
-      }
-
-      .footer img {
-        width: 50px;
-        /* Adjusted image size */
-        height: 50px;
-        /* Adjusted image size */
-        margin: 0 5px;
-        /* Reduced margin */
-        object-fit: cover;
-        /* Ensure all images are square */
-      }
-    </style>
+    <link rel="stylesheet" href="./styles/style.css"> 
   </head>
   <body>
     <div class="navbar">
