added proper navbar for login and main page, and added footer on login page

--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
     <!------------------------------>
 
     <!-- our own navbar goes here -->
-    <nav id="navbarPlaceholder"></nav>
+    <nav id="navbarPlaceholder"></nav> <br>
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
