--- a/main.html
+++ b/main.html
@@ -43,14 +43,8 @@
     <!------------------------------>
 
     <!--Navigation bar-->
-    <div class="navbar">
-        <div class="hyperlinks">
-            <a href="#home">Home</a>
-            <a href="#profile">Profile</a>
-            <a href="#settings">Settings</a>
-            <a href="#logout">Logout</a>
-        </div>
-    </div>
+    <nav id="navbarPlaceholder"></nav>
+
     <br>
 
     <div class="logo">
@@ -86,7 +80,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <!-- <script src="./scripts/script.js"></script> -->\
+    <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
 
