made changed to the footer

--- a/main.html
+++ b/main.html
@@ -70,10 +70,10 @@
 
     <div class="footer">
         <!-- Five images for the footer -->
-        <img src="images/Calendar.png" alt="Image 1">
+        <img src="images/calendar2.png" src="images/calendar2.png" alt="Image 2"></a>
         <img src="images/plus.png" alt="Image 2">
         <a href="setbudget.html">
-            <img src="images/dollar-sign.png" alt="Image 3" style="cursor: pointer;">
+            <img src="images/money.png" alt="Image 3" style="cursor: pointer;">
         </a>
     </div>
 
