added new html files to make add transaction page and yes or no buttons

--- a/addtransaction.html
+++ b/addtransaction.html
@@ -45,31 +45,35 @@
     <!------------------------------>
 
     <!-- our own navbar goes here -->
-    <nav id="navbarPlaceholder"></nav> <br>
+    <nav id="navbarPlaceholder"></nav>
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
-    <div class="container">
-        <h1>Let's Login!</h1>
+
+    <br>
+
+    <div id="addtrans">
+    <h1>Are you eating out today?</h1>
     </div>
-    <div id="firebaseui-auth-container"></div>
-    <div id="loader">Loading...</div>
+
+    <br>
+
+    <div id="yesno">
+    <a href="transactionform.html" class="button" type="button">YES</a>
+
+    <a href="congrats.html" class="button" type="button">NO</a>
+
+    </div>
 
     <!-- our own footer goes here-->
-
-    <div class="footer">
-        <!-- Five images for the footer -->
-        <a href="link_to_calendar.html"><img src="images/calendar2.png" alt="Image 2"></a>
-        <a href="link_to_add_page.html"><img src="images/plus.png" alt="Image 3"></a>
-        <a href="link_to_money_page.html"><img src="images/money.png" alt="Image 4"></a>
-    </div>
+    <nav id="footerPlaceholder"></nav>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/authentication.js"></script>
+    <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
 
