--- a/main.html
+++ b/main.html
@@ -71,10 +71,15 @@
     <div class="footer">
         <!-- Five images for the footer -->
         <img src="images/calendar2.png" src="images/calendar2.png" alt="Image 2"></a>
-        <img src="images/plus.png" alt="Image 2">
+
+        <a href="addtransaction.html">
+            <img src="images/plus.png" alt="Image 2">
+        </a>
+
         <a href="setbudget.html">
             <img src="images/money.png" alt="Image 3" style="cursor: pointer;">
         </a>
+        
     </div>
 
     <!---------------------------------------------->
