Monthly Spending page done

--- a/main.html
+++ b/main.html
@@ -69,8 +69,10 @@
     </div>
 
     <div class="footer">
-        <!-- Five images for the footer -->
-        <img src="images/calendar2.png" src="images/calendar2.png" alt="Image 2"></a>
+        <!-- Three images for the footer -->
+        <a href="monthlyspending.html">
+            <img src="images/calendar2.png" alt="Image 1">
+        </a>
 
         <a href="addtransaction.html">
             <img src="images/plus.png" alt="Image 2">
