Update made to the setbudget.html

--- a/main.html
+++ b/main.html
@@ -68,6 +68,9 @@
         <img src="c:\Users\jasku\Desktop\Projects 1800\Lab 5\Landing page image.png" id="landing-page-image">
     </div>
 
+    <div id="result-output"></div> <!-- This is where the output will be displayed -->
+    <!-- Your other HTML content here -->
+
     <div class="footer">
         <!-- Three images for the footer -->
         <a href="monthlyspending.html">
@@ -89,6 +92,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/setbudget.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
