made a new page for yearly spendings

--- a/main.html
+++ b/main.html
@@ -68,23 +68,13 @@
         <img src="c:\Users\jasku\Desktop\Projects 1800\Lab 5\Landing page image.png" id="landing-page-image">
     </div>
 
-    <div id="result-output"></div> <!-- This is where the output will be displayed -->
-    <!-- Your other HTML content here -->
-
     <div class="footer">
-        <!-- Three images for the footer -->
-        <a href="monthlyspending.html">
-            <img src="images/calendar2.png" alt="Image 1">
-        </a>
-
-        <a href="addtransaction.html">
-            <img src="images/plus.png" alt="Image 2">
-        </a>
-
+        <!-- Five images for the footer -->
+        <img src="images/calendar2.png" alt="Image 2" style="cursor: pointer;">
+        <img src="images/plus.png" alt="Image 2">
         <a href="setbudget.html">
             <img src="images/money.png" alt="Image 3" style="cursor: pointer;">
         </a>
-        
     </div>
 
     <!---------------------------------------------->
@@ -92,7 +82,6 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/setbudget.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
