--- a/setbudget.html
+++ b/setbudget.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sey Budget Page</title>
+    <title>Set Budget Page</title>
     <meta name="comp1800 project" content="My 1800 App">
 
     <!------------------------>
