--- a/yearlyreport.html
+++ b/yearlyreport.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Spending Page</title>
+
+<head>
+    <title>Crave Control</title>
     <meta name="comp1800 project" content="My 1800 App">
+
     <!------------------------>
     <!-- Required meta tags -->
     <!------------------------>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!------------------------------------------>
     <!-- Bootstrap Library CSS JS CDN go here -->
     <!------------------------------------------>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
+
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
@@ -23,18 +30,19 @@
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <link rel="stylesheet" href="./styles/style.css">
-  </head>
 
-  <body>
+</head>
+
+<body>
     <!------------------------------>
     <!-- Your HTML Layout go here -->
     <!------------------------------>
-    <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
     <br>
     <div class="logo">
@@ -45,52 +53,41 @@
     <!-- the body of your page goes here -->
     <!-- stuff -->
     <!--The back button of the page that leads to the previous page-->
-    <div class="back-button">
+    <!-- <div class="back-button">
       <a href="javascript:history.go(-1)">
         <img id="back-button-image" src="https://cdn-icons-png.flaticon.com/512/93/93634.png" alt="Back button image">
       </a>
-    </div>
+    </div> -->
 
-    <!--The monthly spending message container-->
-    <div class="monthly-spending-message-container">
-      <!--Monthly Spending message-->
-      <div id="monthly-spending">
-        <h2>Your Monthly Spending</h2>
-      </div>
+<!--How much you spent this year message-->
+<div id="money-yearly-report">
+    <h2>How much you spent this year</h2>
+    <h2>(number)</h2>
+  </div>
+  <br>
 
-      <!--How much you spent this year message-->
-      <div id="money-spent-this-year">
-        <a href="yearlyreport.html">
-          <h2>How much you</h2>
-          <h2>spent this year</h2>
-          <h2>(number)</h2>
-        </a>
-      </div>
-      <br>
+  <!-- Container for the graph image -->
+<div class="graph-container">
+    <img src="images/graph.png" alt="Graph" class="graph-image">
+</div>
 
-      <!--This is the compare button, at the moment it does not lead anywhere-->
-      <button class="compare-button">
-        <h5>Compare Months</h5>
-      </button>
-    </div>
+<!-- Container for the top 3 spendings -->
+<div class="top-spendings-container">
+    <h3>Top 3 Spendings So Far</h3>
+    <ul>
+        <li>Top spending 1</li>
+        <li>Top spending 2</li>
+        <li>Top spending 3</li>
+    </ul>
+</div>
 
-    <!--This is the compare months button container-->
-    <div class="months-container">
-      <a href="index.html">January</a>
-      <a href="index.html">February</a>
-      <a href="index.html">March</a>
-      <a href="index.html">April</a>
-      <a href="index.html">May</a>
-      <a href="index.html">June</a>
-      <a href="index.html">July</a>
-      <a href="index.html">August</a>
-      <a href="index.html">September</a>
-      <a href="index.html">October</a>
-      <a href="index.html">November</a>
-      <a href="index.html">December</a>
-    </div>
+    <!-- our own navbar goes here -->
+    <nav id="navbarPlaceholder"></nav>
 
-    <!-- our own footer goes here-->
+    <!-- the body of your page goes here -->
+    <!-- stuff -->
+
+     <!-- our own footer goes here-->
     <div class="footer">
       <!-- Three images for the footer -->
       <a href="monthlyspending.html">
@@ -106,11 +103,14 @@
       </a>
     </div>
 
+
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
-  </body>
+
+</body>
+
 </html>
