created a new html file for a transaction history, prompted the user to add input to create a transaction to be put into the database, styled the transaction pages

--- a/congrats.html
+++ b/congrats.html
@@ -49,6 +49,12 @@
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
+    <br>
+    <div id="transactionform">
+        <h1 id="congrats">Congrats on Saving! :)</h1>
+        <br>
+        <a href="monthlyspending.html" class="button" type="button">Monthly History</a>
+    </div>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
