--- a/transactionform.html
+++ b/transactionform.html
@@ -49,6 +49,25 @@
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
+    <div id="transactionform">
+
+        <h1><u>Create A Transaction</u></h1>
+        <p>Date</p>
+        <input type="date" id="transdate" placeholder="date">
+        <br><br>
+        <p>Description</p>
+        <input id="transdescription" placeholder="resturant name">
+        <br><br>
+        <p>Amount</p>
+        <input type="number" id="transamount" placeholder="amount">
+        <br><br>
+        <p>Category</p>
+        <input id="transcategory" placeholder="Category">
+        <br><br>
+
+        <a href="transactionhistory.html" class="button" type="button">Add Transaction</a>
+
+    </div>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
