--- a/transactionhistory.html
+++ b/transactionhistory.html
@@ -5,17 +5,21 @@
     <title>Crave Control</title>
     <meta name="comp1800 project" content="My 1800 App">
 
+    <!------------------------>
     <!-- Required meta tags -->
+    <!------------------------>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap Library CSS CDN go here -->
-    <!-- Boostrap Library JS CDN  go here -->
+    <!------------------------------------------>
+    <!-- Bootstrap Library CSS JS CDN go here -->
+    <!------------------------------------------>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
+
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
@@ -33,8 +37,6 @@
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <link rel="stylesheet" href="./styles/style.css">
 
-
-
 </head>
 
 <body>
@@ -42,40 +44,14 @@
     <!-- Your HTML Layout go here -->
     <!------------------------------>
 
-    <!--Navigation bar-->
+    <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <br>
+    <!-- the body of your page goes here -->
+    <!-- stuff -->
 
-    <div class="logo">
-        <img src="images/Logo - Crave Control.png" alt="Crave Control" />
-    </div>
-
-    <!--Welcome Back message-->
-    <div id="welcome-back">
-        <br>
-        <h2>Welcome Back</h2>
-        <h2>[Username]!</h2>
-    </div>
-
-    <!--Monthly Transactions message-->
-    <div id="monthly-transcations">
-        <br>
-        <br>
-        <h2>[Months's] Transactions</h2>
-        <br>
-        <br>
-        <img src="c:\Users\jasku\Desktop\Projects 1800\Lab 5\Landing page image.png" id="landing-page-image">
-    </div>
-
-    <div class="footer">
-        <!-- Five images for the footer -->
-        <img src="images/calendar2.png" alt="Image 2" style="cursor: pointer;">
-        <a href="addtransaction.html"> <img src="images/plus.png" alt="Image 2"></a>
-        <a href="setbudget.html">
-            <img src="images/money.png" alt="Image 3" style="cursor: pointer;">
-        </a>
-    </div>
+    <!-- our own footer goes here-->
+    <nav id="footerPlaceholder"></nav>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
