added users database code

--- a/transactionform.html
+++ b/transactionform.html
@@ -62,7 +62,7 @@
         <input type="number" id="transamount" placeholder="amount">
         <br><br>
         <p>Category</p>
-        <input id="transcategory" placeholder="Category">
+        <input id="transcategory" placeholder="category">
         <br><br>
 
         <a href="transactionhistory.html" class="button" type="button">Add Transaction</a>
