Edit made to the main.html

--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
         <br>
         <br>
         <h2>[Months's] Transactions</h2>
-        <br>
+        <h2 id="display-month"></h2>
         <br>
         <img src="c:\Users\jasku\Desktop\Projects 1800\Lab 5\Landing page image.png" id="landing-page-image">
     </div>
@@ -82,6 +82,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/main.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
