renamed a html file, triede to connect transaction form to the database

--- a/login.html
+++ b/login.html
@@ -56,13 +56,7 @@
     <div id="loader">Loading...</div>
 
     <!-- our own footer goes here-->
-
-    <div class="footer">
-        <!-- Five images for the footer -->
-        <a href="link_to_calendar.html"><img src="images/calendar2.png" alt="Image 2"></a>
-        <a href="link_to_add_page.html"><img src="images/plus.png" alt="Image 3"></a>
-        <a href="link_to_money_page.html"><img src="images/money.png" alt="Image 4"></a>
-    </div>
+    <nav id="footerPlaceholder"></nav>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
