--- a/transaction.html
+++ b/transaction.html
@@ -59,13 +59,13 @@
         <input id="transdescription" placeholder="resturant name">
         <br><br>
         <p>Amount</p>
-        <input type="number" id="transamount" placeholder="amount">
-        <br><br>
+        <p>$<input type="number" id="transamount" placeholder="0.00"></p>
+        <br>
         <p>Category</p>
         <input id="transcategory" placeholder="category">
         <br><br>
 
-        <a href="transactionhistory.html" class="button" type="button">Add Transaction</a>
+        <a href="transactionhistory.html" class="button" type="button" onclick="addTransaction()">Add Transaction</a>
 
     </div>
 
@@ -77,6 +77,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/transaction.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
