--- a/addtransaction.html
+++ b/addtransaction.html
@@ -59,11 +59,12 @@
     <br>
 
     <div id="yesno">
-    <a href="transactionform.html" class="button" type="button">YES</a>
+    <a href="transaction.html" class="button" type="button" onclick="saveTransactionAndRedirect()">YES</a>
 
     <a href="congrats.html" class="button" type="button">NO</a>
 
     </div>
+
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -73,6 +74,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/transaction.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
