Update made to the transaction html and js page

--- a/transaction.html
+++ b/transaction.html
@@ -65,8 +65,8 @@
         <input id="transcategory" placeholder="category">
         <br><br>
 
-        <a href="transactionhistory.html" class="button" type="button" onclick="addTransaction()">Add Transaction</a>
-
+        <!--This add transaction button, This calls the add transaction function in transaction.js-->
+        <a class="button" type="button" onclick="addTransaction()">Add Transaction</a>
     </div>
 
     <!-- our own footer goes here-->
