--- a/main.html
+++ b/main.html
@@ -62,8 +62,7 @@
     <div id="monthly-transcations">
         <br>
         <br>
-        <h2>[Months's] Transactions</h2>
-        <h2 id="display-month"></h2>
+        <h2 id="currentMonth"></h2>
         <br>
         <img src="c:\Users\jasku\Desktop\Projects 1800\Lab 5\Landing page image.png" id="landing-page-image">
     </div>
