Update made to the main html and js file

--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
     <div id="welcome-back">
         <br>
         <h2>Welcome Back</h2>
-        <h2>[Username]!</h2>
+        <h2 id="name-goes-here"></h2>
     </div>
 
     <!--Monthly Transactions message-->
