Update made to the Main.html page

--- a/main.html
+++ b/main.html
@@ -64,7 +64,7 @@
         <br>
         <h2 id="currentMonth"></h2>
         <br>
-        <img src="c:\Users\jasku\Desktop\Projects 1800\Lab 5\Landing page image.png" id="landing-page-image">
+        <img src="images/graph.png" id="landing-page-image">
     </div>
 
     <div class="footer">
