--- a/yearlyreport.html
+++ b/yearlyreport.html
@@ -74,10 +74,12 @@
 <!-- Container for the top 3 spendings -->
 <div class="top-spendings-container">
     <h3>Top 3 Spendings So Far</h3>
-    <ul>
-        <li>Top spending 1</li>
-        <li>Top spending 2</li>
-        <li>Top spending 3</li>
+    <ul id="top-spending-list">
+      <!--
+        <li id="top-spending-1">Top spending 1</li>
+        <li id="top-spending-2">Top spending 2</li>
+        <li id="top-spending-3">Top spending 3</li>
+      -->
     </ul>
 </div>
 
@@ -109,6 +111,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/yearlyreport.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
