made a monthlyreport and comparemonths page aswell as hid some of the hyperlinks

--- a/monthlyreport.html
+++ b/monthlyreport.html
@@ -53,31 +53,31 @@
     <!-- the body of your page goes here -->
     <!-- stuff -->
     <!--The back button of the page that leads to the previous page-->
-    <div class="back-button">
+  <div class="back-button">
       <a href="javascript:history.go(-1)">
         <img id="back-button-image" src="https://cdn-icons-png.flaticon.com/512/93/93634.png" alt="Back button image">
       </a>
     </div>
 
 <!--How much you spent this year message-->
-<div id="money-yearly-report">
-    <h2>How much you spent this year</h2>
+<div id="money-monthly-report">
+    <h2>How much you spent in (month)</h2>
     <h2>(number)</h2>
   </div>
   <br>
 
   <!-- Container for the graph image -->
-<div class="yearly-graph-container">
+<div class="monthly-graph-container">
     <img src="images/graph.png" alt="Graph" class="graph-image">
 </div>
 
 <!-- Container for the top 3 spendings -->
-<div class="top-yearly-spendings-container">
+<div class="top-monthly-spendings-container">
     <h3>Top 3 Spendings So Far</h3>
-    <ul id="top-yearly-spending-list">
-        <li id="top-yearly-spending-1">Top spending 1</li>
-        <li id="top-yearly-spending-2">Top spending 2</li>
-        <li id="top-yearly-spending-3">Top spending 3</li>
+    <ul id="top-monthly-spendings-list">
+        <li id="top-monthly-spending-1">Top spending 1</li>
+        <li id="top-monthly-spending-2">Top spending 2</li>
+        <li id="top-monthly-spending-3">Top spending 3</li>
     </ul>
 </div>
 
