--- a/monthlyspending.html
+++ b/monthlyspending.html
@@ -60,9 +60,9 @@
 
       <!--How much you spent this year message-->
       <div id="money-spent-this-year">
-        <a href="yearlyreport.html">
           <h2>How much you</h2>
-          <h2>spent this year</h2>
+          <h2>spent this year:</h2>
+        <a href="yearlyreport.html">
           <h2>(number)</h2>
         </a>
       </div>
@@ -70,24 +70,26 @@
 
       <!--This is the compare button, at the moment it does not lead anywhere-->
       <button class="compare-button">
-        <h5>Compare Months</h5>
+        <a href="comparemonths.html">
+          <h5>Compare Months</h5>
+        </a>
       </button>
     </div>
 
     <!--This is the compare months button container-->
     <div class="months-container">
-      <a href="index.html">January</a>
-      <a href="index.html">February</a>
-      <a href="index.html">March</a>
-      <a href="index.html">April</a>
-      <a href="index.html">May</a>
-      <a href="index.html">June</a>
-      <a href="index.html">July</a>
-      <a href="index.html">August</a>
-      <a href="index.html">September</a>
-      <a href="index.html">October</a>
-      <a href="index.html">November</a>
-      <a href="index.html">December</a>
+      <a href="monthlyreport.html">January</a>
+      <a href="monthlyreport.html">February</a>
+      <a href="monthlyreport.html">March</a>
+      <a href="monthlyreport.html">April</a>
+      <a href="monthlyreport.html">May</a>
+      <a href="monthlyreport.html">June</a>
+      <a href="monthlyreport.html">July</a>
+      <a href="monthlyreport.html">August</a>
+      <a href="monthlyreport.html">September</a>
+      <a href="monthlyreport.html">October</a>
+      <a href="monthlyreport.html">November</a>
+      <a href="monthlyreport.html">December</a>
     </div>
 
     <!-- our own footer goes here-->
