--- a/main.html
+++ b/main.html
@@ -67,14 +67,11 @@
         <img src="images/graph.png" id="landing-page-image">
     </div>
 
-    <div class="footer">
-        <!-- Five images for the footer -->
-        <img src="images/calendar2.png" alt="Image 1" style="cursor: pointer;">
-        <a href="addtransaction.html"> <img src="images/plus.png" alt="Image 2"></a>
-        <a href="setbudget.html">
-            <img src="images/money.png" alt="Image 3" style="cursor: pointer;">
-        </a>
-    </div>
+   <!-- Footer will be inserted here -->
+   <div id="mainfooterPlaceholder"></div>
+   
+
+   <!-- JavaScript files -->
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
