Fixed the footer file and deleted the mainfooter.html

--- a/text/footer.html
+++ b/text/footer.html
@@ -1,5 +1,10 @@
 
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    
+    <a href="/1800_202410_BBY20/monthlyspending.html"><img src="/1800_202410_BBY20/images/calendar2.png" alt="transaction history"></a>
+    <a href="/1800_202410_BBY20/addtransaction.html"><img src="/1800_202410_BBY20/images/plus.png" alt=" add transaction"></a>
+    <a href="/1800_202410_BBY20/setbudget.html"> <img src="/1800_202410_BBY20/images/money.png" alt="Image 3"></a>
+    
     <p class="col-md-4 mb-0 text-muted">&copy; 2024 Crave Control</p>
     <a href="/"
         class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
