--- a/main.html
+++ b/main.html
@@ -68,14 +68,14 @@
     </div>
 
    <!-- Footer will be inserted here -->
-   <div id="mainfooterPlaceholder"></div>
-   
+   <nav id="footerPlaceholder"></nav>
 
    <!-- JavaScript files -->
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
+
     <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/main.js"></script>
