--- a/setbudget.html
+++ b/setbudget.html
@@ -54,6 +54,13 @@
       <img src="images/Logo - Crave Control.png" alt="Crave Control" />
   </div>
 
+  <!--The back button of the page that leads to the previous page-->
+  <div class="back-button">
+    <a href="javascript:history.go(-1)">
+      <img id="back-button-image" src="https://cdn-icons-png.flaticon.com/512/93/93634.png" alt="Back button image">
+    </a>
+  </div>
+
   <br>
 
     <!--Set Button Page-->
@@ -89,19 +96,8 @@
       <br>
     </div>
 
-    <div class="footer">
-      <!-- Three images for the footer -->
-      <a href="monthlyspending.html">
-          <img src="images/calendar2.png" alt="Image 1">
-      </a>
-
-      <a href="addtransaction.html">
-          <img src="images/plus.png" alt="Image 2">
-      </a>
-
-      <a href="setbudget.html">
-          <img src="images/money.png" alt="Image 3" style="cursor: pointer;">
-      </a>
+    <!-- Footer will be inserted here -->
+    <nav id="footerPlaceholder"></nav>
 
     
     <!---------------------------------------------->
