--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -8,17 +8,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="../main.html">Home</a>
+                    <a class="nav-link" href="/main.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../aboutus.html">Profile</a>
+                    <a class="nav-link" href="/profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../main.html">About Us</a>
+                    <a class="nav-link" href="/aboutus.html">About Us</a>
                 </li>
             </ul>
             <div class="d-flex">
-                <a class="btn btn-outline-light" href="../index.html">Logout</a>
+                <a class="btn btn-outline-light" href="/index.html">Logout</a>
             </div>
         </div>
     </div>
