styled footer to be the same colour as the navbar

--- a/text/footer.html
+++ b/text/footer.html
@@ -2,10 +2,10 @@
 
     <link rel="stylesheet" href="/styles/style.css">
 
-<div class="footer">
+<div class="footer bg-primary">
     <a href="/monthlyspending.html"><img src="/images/calendar2.png" alt="transaction history"></a>
     <a href="/addtransaction.html"><img src="/images/plus.png" alt=" add transaction"></a>
-    <a href="/addtransaction.html"> <img src="/images/money.png" alt="set budget"></a>
+    <a href="/setbudget.html"> <img src="/images/money.png" alt="set budget"></a>
 </div>
 
     <p class="col-md-4 mb-0 text-muted">&copy; 2024 Crave Control</p>
