--- a/aboutus.html
+++ b/aboutus.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    <div class="maincontainer">
-        <h1>About Us</h1>
-        <div class="dev">
-            <img src="jas_image.jpg" alt="Jas">
-            <h2>Jas</h2>
-            <p> (text) </p>
+    <div class="back-button">
+        <a href="main.html">
+          <img id="back-button-image-aboutus" src="https://cdn-icons-png.flaticon.com/512/93/93634.png" alt="Back button image">
+        </a>
+      </div>
+        <div class="maincontainer">
+            <h1>About Us</h1>
+            <div class="dev">
+                <img src="jas_image.jpg" alt="Jas">
+                <h2>Jas</h2>
+                <p> (text) </p>
+            </div>
+            <div class="dev">
+                <img src="monica_image.jpg" alt="Monica">
+                <h2>Monica</h2>
+                <p> (text )</p>
+            </div>
+            <div class="dev">
+                <img src="max_image.jpg" alt="Max">
+                <h2>Max</h2>
+                <p>(text) /p>
+            </div>
         </div>
-        <div class="dev">
-            <img src="monica_image.jpg" alt="Monica">
-            <h2>Monica</h2>
-            <p> (text )</p>
-        </div>
-        <div class="dev">
-            <img src="max_image.jpg" alt="Max">
-            <h2>Max</h2>
-            <p>(text) /p>
-        </div>
-    </div>
 </body>
 </html>
