--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
     <br>
 
     <div class="logo">
-        <img src="images/Logo - Crave Control.png" alt="Crave Control" />
+        <img src="images/CraveControlBlueLogo.png" alt="Crave Control" />
     </div>
 
     <!--Welcome Back message-->
