--- a/text/footer.html
+++ b/text/footer.html
@@ -5,7 +5,7 @@
 <div class="footer">
     <a href="/monthlyspending.html"><img src="/images/calendar2.png" alt="transaction history"></a>
     <a href="/addtransaction.html"><img src="/images/plus.png" alt=" add transaction"></a>
-    <a href="/addtransaction.html"> <img src="/images/money.png" alt="set budget"></a>
+    <a href="/setbudget.html"> <img src="/images/money.png" alt="set budget"></a>
 </div>
 
     <p class="col-md-4 mb-0 text-muted">&copy; 2024 Crave Control</p>
