--- a/addtransaction.html
+++ b/addtransaction.html
@@ -59,9 +59,9 @@
     <br>
 
     <div id="yesno">
-    <a href="transaction.html" class="button" type="button" onclick="saveTransactionAndRedirect()">YES</a>
+    <a href="transaction.html" class="button bg-primary" type="button" onclick="saveTransactionAndRedirect()">YES</a>
 
-    <a href="congrats.html" class="button" type="button">NO</a>
+    <a href="congrats.html" class="button bg-primary" type="button">NO</a>
 
     </div>
 
