--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
 
     <!-- the body of your page goes here -->
     <!-- the body of your page goes here -->
-    <div class="container text-center py-4">
+    <br><br>
+    <div class="container text-center py-4 bg-primary">
         <h1>Welcome to</h1>
         <img class="responsive" src="images\Logo - Crave Control.png" alt="">
         <br><br>
-        <a href="login.html" class="button" type="button">Login</a>
+        <a href="login.html" class="button bg-primary" type="button">Login</a>
     </div>
 
     <!-- our own footer goes here-->
