--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <br><br>
     <div class="container text-center py-4 bg-primary">
         <h1>Welcome to</h1>
-        <img class="responsive" src="images\Logo - Crave Control.png" alt="">
+        <img class="responsive" src="/images/CraveControlBlueLogo.png" alt="">
         <br><br>
         <a href="login.html" class="button bg-primary" type="button">Login</a>
     </div>
