--- a/setbudget.html
+++ b/setbudget.html
@@ -51,7 +51,7 @@
   <br>
 
   <div class="logo">
-      <img src="images/Logo - Crave Control.png" alt="Crave Control" />
+      <img src="/images/CraveControlBlueLogo.png" alt="Crave Control" />
   </div>
 
   <!--The back button of the page that leads to the previous page-->
