--- a/monthlyspending.html
+++ b/monthlyspending.html
@@ -38,7 +38,7 @@
     <nav id="navbarPlaceholder"></nav>
     <br>
     <div class="logo">
-      <img src="images/Logo - Crave Control.png" alt="Crave Control" />
+      <img src="/images/CraveControlBlueLogo.png" alt="Crave Control" />
     </div>
     <br>
     
