--- a/yearlyreport.html
+++ b/yearlyreport.html
@@ -46,7 +46,7 @@
     <nav id="navbarPlaceholder"></nav>
     <br>
     <div class="logo">
-      <img src="images/Logo - Crave Control.png" alt="Crave Control" />
+      <img src="/images/CraveControlBlueLogo.png" alt="Crave Control" />
     </div>
     <br>
     
