--- a/monthlyspending.html
+++ b/monthlyspending.html
@@ -93,20 +93,7 @@
     </div>
 
     <!-- our own footer goes here-->
-    <div class="footer">
-      <!-- Three images for the footer -->
-      <a href="monthlyspending.html">
-        <img src="images/calendar2.png" alt="Image 1">
-      </a>
-
-      <a href="addtransaction.html">
-        <img src="images/plus.png" alt="Image 2">
-      </a>
-
-      <a href="setbudget.html">
-        <img src="images/money.png" alt="Image 3" style="cursor: pointer;">
-      </a>
-    </div>
+    <nav id="footerPlaceholder"></nav>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
