styled: welcome page, footer & buttons to match navbar color, added template for about us and profile html pages, formatted documents to make code pages easier to read. Coded: login footer after login footer, fixed set a budget icon pathway.

--- a/congrats.html
+++ b/congrats.html
@@ -53,7 +53,7 @@
     <div id="transactionform">
         <h1 id="congrats">Congrats on Saving! :)</h1>
         <br>
-        <a href="monthlyspending.html" class="button" type="button">Monthly History</a>
+        <a href="monthlyspending.html" class="button bg-primary" type="button">Monthly History</a>
     </div>
 
     <!-- our own footer goes here-->
