--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- the body of your page goes here -->
     <!-- the body of your page goes here -->
     <br><br>
-    <div class="container text-center py-4 bg-primary">
+    <div class="container text-center py-4">
         <h1>Welcome to</h1>
         <img class="responsive" src="/images/CraveControlBlueLogo.png" alt="">
         <br><br>
