--- a/login.html
+++ b/login.html
@@ -56,6 +56,21 @@
     <div id="loader">Loading...</div>
 
     <!-- our own footer goes here-->
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+
+        <link rel="stylesheet" href="/styles/style.css">
+
+        <div class="footer bg-primary">
+            <p class="col-md-4 mb-0 text-muted">&copy; 2024 Crave Control</p>
+            <a href="/"
+                class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                <svg class="bi me-2" width="40" height="32">
+                    <use xlink:href="#bootstrap" />
+                </svg>
+            </a>
+        </div>
+
+    </footer>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
