--- a/transaction.html
+++ b/transaction.html
@@ -66,7 +66,7 @@
         <br><br>
 
         <!--This add transaction button, This calls the add transaction function in transaction.js-->
-        <a class="button" type="button" onclick="addTransaction()">Add Transaction</a>
+        <a class="button bg-primary" type="button" onclick="addTransaction()">Add Transaction</a>
     </div>
 
     <!-- our own footer goes here-->
