--- a/addtransaction.html
+++ b/addtransaction.html
@@ -53,15 +53,16 @@
     <br>
 
     <div id="addtrans">
-    <h1>Are you eating out today?</h1>
+        <h1>Are you eating out today?</h1>
     </div>
 
     <br>
 
     <div id="yesno">
-    <a href="transaction.html" class="button bg-primary" type="button" onclick="saveTransactionAndRedirect()">YES</a>
+        <a href="transaction.html" class="button bg-primary" type="button"
+            onclick="saveTransactionAndRedirect()">YES</a>
 
-    <a href="congrats.html" class="button bg-primary" type="button">NO</a>
+        <a href="congrats.html" class="button bg-primary" type="button">NO</a>
 
     </div>
 
