--- a/profile.html
+++ b/profile.html
@@ -1,36 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Crave Control</title>
+    <meta name="comp1800 project" content="My 1800 App">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <!-- Bootstrap Library CSS CDN go here -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Firebase Libraries -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css">
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
+    <!-- Navbar -->
+    <nav id="navbarPlaceholder"></nav>
+
+    <!-- Back Button -->
     <div class="back-button">
         <a href="main.html">
-          <img id="back-button-image-aboutus" src="https://cdn-icons-png.flaticon.com/512/93/93634.png" alt="Back button image">
+            <img id="back-button-image-aboutus" src="https://cdn-icons-png.flaticon.com/512/93/93634.png" alt="Back button image">
         </a>
-      </div>
-        <div class="profilemaincontainer">
-            <h1>Your Information</h1>
-            <div class="user">
-                <h3>email: (email)</h3>
-                <p>password: (text) [show/hide password] </p>
+    </div>
 
-    </body>
+    <!-- Profile Information -->
+    <div class="profilemaincontainer">
+        <h1>Your Information</h1>
+        <div id="profileinfo">
+            <br>
+            <div class="profileinfo">
+                <h2>Name: <span id="name-goes-here"></span></h2>
+            </div>
+            <div class="profileinfo">
+                <h2>Email: <span id="email-goes-here"></span></h2>
+            </div>
+            <div class="profileinfo">
+                <h2>Password:</h2>
+            </div>
+        </div>
+    </div>
 
-    <!-- our own footer goes here-->
+    <!-- Footer -->
     <nav id="footerPlaceholder"></nav>
 
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
+    <!-- JavaScript Imports -->
     <script src="./scripts/firebaseAPI_BBY20.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <!-- <script src="./scripts/script.js"></script> -->
-
+    <script src="./scripts/profile.js"></script>
 </body>
-
 </html>
