changed about us descriptions

--- a/aboutus.html
+++ b/aboutus.html
@@ -55,19 +55,16 @@
         <div class="aboutusmaincontainer">
             <h1>About Us</h1>
             <div class="dev">
-                <img src="jas_image.jpg" alt="Jas">
                 <h2>Jas</h2>
-                <p>(text)</p>
+                <p>Main backend coder</p>
             </div>
             <div class="dev">
-                <img src="monica_image.jpg" alt="Monica">
                 <h2>Monica</h2>
-                <p>(text)</p>
+                <p>Project leader</p>
             </div>
             <div class="dev">
-                <img src="max_image.jpg" alt="Max">
                 <h2>Max</h2>
-                <p>(text)</p>
+                <p>Design/CSS</p>
             </div>
         </div>
 </body>
