Final CSS fixed

--- a/aboutus.html
+++ b/aboutus.html
@@ -55,7 +55,7 @@
         <div class="aboutusmaincontainer">
             <h1>About Us</h1>
             <div class="dev">
-                <h2>Jas</h2>
+                <h2>Jaskunwar Hunjan</h2>
                 <p>Main backend coder</p>
             </div>
             <div class="dev">
