--- a/addtransaction.html
+++ b/addtransaction.html
@@ -52,6 +52,16 @@
 
     <br>
 
+    <br>
+<!--The back button of the page that leads to the previous page-->
+<div class="back-button">
+  <a href="javascript:history.go(-1)">
+    <img id="back-button-image" src="https://cdn-icons-png.flaticon.com/512/93/93634.png" alt="Back button image">
+  </a>
+</div>
+
+<br>
+
     <div id="addtrans">
         <h1>Are you eating out today?</h1>
     </div>
