--- a/monthlyspending.html
+++ b/monthlyspending.html
@@ -73,20 +73,21 @@
 
   <!--This is the compare months button container-->
   <div class="months-container">
-    <p id="january-total-spent"></p>
-    <p id="february-total-spent"></p>
-    <p id="march-total-spent"></p>
-    <p id="april-total-spent"></p>
-    <p id="may-total-spent"></p>
-    <p id="june-total-spent"></p>
-    <p id="july-total-spent"></p>
-    <p id="august-total-spent"></p>
-    <p id="september-total-spent"></p>
-    <p id="october-total-spent"></p>
-    <p id="november-total-spent"></p>
-    <p id="december-total-spent"></p>
+    <h5 id="january-total-spent"></h5>
+    <h5 id="february-total-spent"></h5>
+    <h5 id="march-total-spent"></h5>
+    <h5 id="april-total-spent"></h5>
+    <h5 id="may-total-spent"></h5>
+    <h5 id="june-total-spent"></h5>
+    <h5 id="july-total-spent"></h5>
+    <h5 id="august-total-spent"></h5>
+    <h5 id="september-total-spent"></h5>
+    <h5 id="october-total-spent"></h5>
+    <h5 id="november-total-spent"></h5>
+    <h5 id="december-total-spent"></h5>
   </div>
-  
+
+  <button class="delete-button" onclick="confirmDelete()">Delete All Data</button>
 
   <!-- our own footer goes here-->
   <nav id="footerPlaceholder"></nav>
