--- a/profile.html
+++ b/profile.html
@@ -40,7 +40,7 @@
         <div id="profileinfo">
             <br>
             <div class="profileinfo">
-                <h2>Name: <span id="name-goes-here"></span></h2>
+                <h2>Username: <span id="name-goes-here"></span></h2>
             </div>
             <div class="profileinfo">
                 <h2>Email: <span id="email-goes-here"></span></h2>
