--- a/setbudget.html
+++ b/setbudget.html
@@ -38,14 +38,22 @@
   <link rel="stylesheet" href="./styles/style.css">
 
   <style>
+
+    /* body { */
+      /* background-image: url('https://as2.ftcdn.net/v2/jpg/01/07/86/19/1000_F_107861953_YZ800J1eDVtaEVAMXj1KRpez6efJpm7D.jpg'); */
+    /* } */
+
     /*Style element for the budget displayed on the set budget page*/
-    #budget {
-      text-align: center;
-    }
+    /* #budget { */
+      /* text-align: center; */
+    /* } */
+    
   </style>
 
 </head>
 
+<body>
+  <!-- <div class="background">   -->
 <nav id="navbarPlaceholder"></nav>
 
 <br>
@@ -54,6 +62,7 @@
   <img src="/images/CraveControlBlueLogo.png" alt="Crave Control" />
 </div>
 
+<br>
 <!--The back button of the page that leads to the previous page-->
 <div class="back-button">
   <a href="javascript:history.go(-1)">
@@ -69,9 +78,10 @@
   <br>
   <img id="edit-icon" src="https://static.thenounproject.com/png/4436557-200.png" alt="Edit-icon">
   <br>
-  <br>
 
   <!--Dollar amount input and message field-->
+  <h5 id="set-budget-text">Set Budget for the Month</h5>
+
   <label id="amount-text">Amount $:</label>
   <input type="number" id="amount-input" placeholder="50">
 
@@ -103,7 +113,7 @@
 <!-- <script src="./scripts/script.js"></script> -->
 
 </div>
-
+<!-- </div> -->
 </body>
 
 </html>
