--- a/transaction.html
+++ b/transaction.html
@@ -47,6 +47,12 @@
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
+    <!--The back button of the page that leads to the previous page-->
+<div class="back-button">
+    <a href="javascript:history.go(-1)">
+      <img id="back-button-image" src="https://cdn-icons-png.flaticon.com/512/93/93634.png" alt="Back button image">
+    </a>
+  </div>
     <!-- the body of your page goes here -->
     <!-- stuff -->
     <div id="transactionform">
